# investment-research-agent

./: .env.example  .gitignore  README.md  dev-log.md  interview-review.md  pyproject.toml
app/: main.py
app/agent/: agent_loop.py  decisioning.py  llm_client.py  query_classifier.py  query_decomposer.py  retriever.py  tools.py
app/agents/: __init__.py  compliance_agent.py  orchestrator.py  planner.py  retriever_agent.py  writer_agent.py
app/audit/: __init__.py  service.py
app/compliance/: checker.py  models.py  rules.py
app/core/: celery_app.py  config.py  db.py  logging.py  qdrant_client.py  redis_client.py  request_context.py  tracing.py
app/db/: audit_repo.py  document_repo.py  models.py
app/doc_pipeline/: chunker.py  embedder.py
app/evals/: __init__.py  models.py  runner.py  scorer.py
app/memory/: compressor.py  session.py
app/models/: agent_task.py  chat.py  common.py  decision.py  document.py
app/policy/: __init__.py  models.py  service.py
app/replay/: __init__.py  serializer.py  service.py  store.py  summary.py
app/tasks/: doc_tasks.py
docker/: Dockerfile  docker-compose.yml
evals/: README.md  cases.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
migrations/: env.py
migrations/versions/: 0d5c9c8a3b10_add_document_ownership.py  0f2141d6f4a2_add_decision_fields_to_audit.py  (+2 more)
scripts/: integration_smoke.py  run_eval.py
tests/: conftest.py  test_adaptive_rag.py  test_chat.py  test_compliance.py  test_decision.py  test_documents.py  test_eval.py  test_health.py  test_memory.py  test_multi_agent.py  test_policy.py  test_rag.py  test_replay.py  test_trace_eval_api.py
(+55 files in other folders)
