[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-research-agent"
version = "0.1.0"
description = "智能投研助手 Agent"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # LLM + Embedding (openai SDK covers both Deepseek chat and OpenAI embedding)
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Cache / message broker
    "redis[hiredis]>=5.0.0",
    # Vector store
    "qdrant-client>=1.10.0",
    # Async task queue
    "celery>=5.4.0",
    # Logging
    "structlog>=24.2.0",
    # Tracing
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    # HTTP client
    "httpx>=0.27.0",
    # Document parsing
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # Chunking & embedding
    "tiktoken>=0.7.0",
    "openai>=1.30.0",
    # Async file I/O
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
